--- a/VRChat/28/1240128.html
+++ b/VRChat/28/1240128.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qQjZZna99Jl/BD7enkKRltGaIPdugq9nRI0q2QZMvkY="></script>
+    "AOdr03cZUfjbnvaINF9acgjCOQiuRggEjyBZapyVu04="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルVRchatアバターモデル「BERIN」","description":"2Pカラー、導入しました。\n\n●●　”BERIN(BERU)”基本データ構成　●●\n\n私服Ver.（Berin-private)\nPolygon数：12257\nTexture：2\nMaterial数：2\n\n私服(半袖）Ver.（2P Beru-private)\nPolygon数：12101\nTexture：2\nMaterial数：2\n\n制服Ver.（Berin-uniform)\nPolygon数：12257\nTexture：4\nMaterial数：3\n\n制服（半袖）Ver.（2P Beru-uniform)\nPolygon数：12629\nTexture：4\nMaterial数：3\n\n戦闘スーツVer.（Berin-suits)\nPolygon数：12257\nTexture：3\nMaterial数：2\n\n戦闘スーツ(2P)Ver.（2P Beru-suits)\nPolygon数：12257\nTexture：3\nMaterial数：2\n\n銃（Gun）\nPolygon数：3662\nTexture：5\nMaterial数：1\n\nツインソード（Sord）\nPolygon数：1572\nTexture：0\nMaterial数：3\n\nマスク（Mask）\nPolygon数：670\nTexture：1\nMaterial数：1\n\nUnityアセット形式１\nVRchat用のリップシンク内包\n表情のアニメーション内蔵\n\n\n●●　Unityアセットでの注意事項　●●\n\n●揺れもの\n有料のDynamicBoneを使っています、お持ちでない場合はMissingとなり揺れません。\n\n●Shader\nShaderに無料のArktoon-Shadersを使っています。\nArktoon-Shadersは下記よりダウンしてお使いください。\n\nhttps://booth.pm/ja/items/1027997\n\n\n●確認\nデスクトップ、VR、フルトラッキングの確認済\n\n\n●●このモデルで可能な行為\n\n　・モデルの改変\n　・非営利での利用\n　・収益化された動画への映り込み\n\n\n●●禁止事項\n\n　・再配布は禁止します。\n\n　・恐喝、政治への使用は禁止です。公序良俗に反しない範囲でご利用ください。\n\n　・VRchat内でのR18、R18Gへの使用は禁止します。\n\n　・商用利用する場合、必ず”NullUDN”または”Nullwhisper”のクレジットをお書きください。\n\n\n●●免責事項\n当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。\n\nTwitter：@NULLwhisper3D\nBooth：https://megaudon.booth.pm/\n\n\nーーー更新履歴ーーー\n2019/08/17：2Pカラーテクスチャ3種\u0026半袖デザインVer,2種追加\n\n制定日\n2019年2月22日","url":"https://booth.pm/ja/items/1240128","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/8f9207fb-c073-44a7-8957-ba013b66011b/i/1240128/14261d14-3b72-42a4-ac86-5e6d3b223d00_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qQjZZna99Jl/BD7enkKRltGaIPdugq9nRI0q2QZMvkY="></script>
+    nonce="AOdr03cZUfjbnvaINF9acgjCOQiuRggEjyBZapyVu04="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240128/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240128/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
