--- a/VRChat/38/1239638.html
+++ b/VRChat/38/1239638.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JexZeHA/ov17N/f6WvwbVnc7MFCOn4lwjP/OY6P+uNI="></script>
+    "CpE1G4jT0xDP4vlnjbBGofszbh6q4uTl+tmsDejIPcU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お手軽スライドショーフォトフレーム","description":"専用シェーダーでスライドショーがお手軽にできるフォトフレームです。写真は2～8枚まで。VRChatのスクリーンショットをそのまま入れるだけで動くのでラクです。\nNumber of photosで指定した数と、セットしたテクスチャの枚数を必ず一致させてください。\n\nUnity2019.4.31f1のbuilt-in環境で動作確認しています。unitypackage形式。\n\n■参考動画\nhttps://twitter.com/noriben327/status/1098923994827214848\n","url":"https://booth.pm/ja/items/1239638","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"600"},"image":"https://booth.pximg.net/c/620x620/e21d0fb1-a91d-4e44-8c8b-39f92a18972d/i/1239638/d12f27c1-5d16-4eaa-93fd-b4da3c50203d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JexZeHA/ov17N/f6WvwbVnc7MFCOn4lwjP/OY6P+uNI="></script>
+    nonce="CpE1G4jT0xDP4vlnjbBGofszbh6q4uTl+tmsDejIPcU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1239638/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1337
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1239638/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1337
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
