--- a/VRChat/62/1239662.html
+++ b/VRChat/62/1239662.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bJMml1dXKMbd94GNASK8rKOGOnwOlq+joxj2h4I5y9c="></script>
+    "LOv5ShHYLHagaVA5mDQT38w1xFl8YBloh7Xjt6lsiyM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Man of Screw","description":"VRChatで使える螺子男のfbxモデルです。\n画像はArktoonを適用してますが含まれていないので適当に設定してください。\n改変、商用利用、再配布などお好きにどうぞ。","url":"https://booth.pm/ja/items/1239662","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5dbde460-c7a3-46db-b869-b52e75f19593/i/1239662/f96ff55d-7a58-4480-a006-a0e812d557ef_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bJMml1dXKMbd94GNASK8rKOGOnwOlq+joxj2h4I5y9c="></script>
+    nonce="LOv5ShHYLHagaVA5mDQT38w1xFl8YBloh7Xjt6lsiyM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1239662/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1239662/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
