--- a/VRChat/69/1239069.html
+++ b/VRChat/69/1239069.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DSWWWwwk3uqXskBIl7i4jwd2FaGsNvbwmnzb2ijd3HU="></script>
+    "YRS3g8nQmrJlCYIL/sSHOWb7yZ50rKZ11n1UM21SGvA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"No3_StrengthYellow","description":"　No3_StrengthYellow\n\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n ver.1.01\n\n1オブジェクト　\n3マテリアル　\nポリゴン数 29510\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n重要禁止事項の例\n・本モデルの再配布、再販売\n・アバターペデステルでの利用\n・publicアバターとしてのアバターアップロード\n・自作発言\n・政治・宗教的利用\n\n　許可事項の例\n・モデルデータの改変\n・商用利用\n\n\n※事前の連絡なく変更、修正、事項の追加を行うことがあります。\n\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n\n■内容■\n\n・readme.txt\n\n・No3_StrengthYellow ver.1.01.unitypackage\n\nunitypackage内\n・.png（テクスチャファイル等）\n・.fbx（本モデル）\n・.material\n\n◇設定されているもの\nscene内のモデル\n\n\n■更新情報■\n\nver.1.01 2019/02/22：new\n\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n■利用規約■\n\n\n1、VRChat\u0026UnityModelのデータを、抽出できる形での転載・再配布・販売は禁止\n\n2、一部パーツやメッシュを他製作者のモデルに流用したり、映像やゲームなどの制作物という形を介さずに本モデルやテクスチャそのものを販売することを禁止\n\n3、映像媒体、ゲーム作品等の露出は可能です。\n\n4、人に迷惑をかけるような使用方法は禁止\n\n5、本モデルデータを利用された事によって生じるいかなる損害に対して当方は一切責任を負いません。自己責任・ご判断でご利用下さい。\n\n6、本モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなします。\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n","url":"https://booth.pm/ja/items/1239069","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/9a77de9c-4e1b-4d58-adeb-bfa736ae6d07/i/1239069/da7f4d29-480f-4de9-a380-a46e7afca087_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DSWWWwwk3uqXskBIl7i4jwd2FaGsNvbwmnzb2ijd3HU="></script>
+    nonce="YRS3g8nQmrJlCYIL/sSHOWb7yZ50rKZ11n1UM21SGvA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1239069/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1239069/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
