--- a/VRChat/93/1239093.html
+++ b/VRChat/93/1239093.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "X2YxTpyI/bigLaBF6ukw3ul6z7R5Af0XZcSwPlyRbjA="></script>
+    "N4Gejbl878g9BkP20x/B5Rvd7A/eV+pqoNsdQ9+BnZ0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"うんち棒","description":"皆さんは小学生の時に道端に落ちているうんちを爆竹を入れて爆発させたり、友達の背中に入れたり、棒でツンツンしませんでしたか？棒にくっついてしまったうんちをもって友達を追いかけたりしませんでしたか？懐かしい気持ちにさせてくれる。ノスタルジックで美しい代物になっています。\n\n※知らない人にやるとブロックされます。まじでやめておいたほうがいいです。\n※テクスチャとかは本当に適当です。気をつけてください。","url":"https://booth.pm/ja/items/1239093","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1239093/c1952339-a601-4f7f-a4f8-5efbc1dfba98_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="X2YxTpyI/bigLaBF6ukw3ul6z7R5Af0XZcSwPlyRbjA="></script>
+    nonce="N4Gejbl878g9BkP20x/B5Rvd7A/eV+pqoNsdQ9+BnZ0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1239093/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1239093/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
