--- a/VRChat/62/1238962.html
+++ b/VRChat/62/1238962.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uyfNO34A4tBErAu3aUtN+nPb9Dty8JMoz3FnZiKBpxk="></script>
+    "ZXMfR4yaQFYWAZv6Rbc6LKDuyYmRrTIj/i67IBAw7A8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルVRchatアバターモデル「まひる」","description":"●●　”まひる”基本データ構成　●●\n\nPolygon数：19144\nTexture：2（MAHIRUtex.png、faceM.png）\nMaterial数：2\nUnityアセット形式１\nVRchat用のリップシンク内包\n表情として目元に「まばたき」「笑顔」「はぅ」「ウィンク左」「ウィンク右」「なごみ」「ジト目」「びっくり」「星目」「ハート目」\n「グルグル目」、眉毛に「上」「下」「怒り」「真面目」「悲しい」、リップに「あ」「い」「う」「え」「お」「口角下げ」「口角上げ」\nその他に「照れ」「青ざめ」を入れています。\n（ある程度設定した表情アニメーションは梱包しています。）\n\n\n\n●●　Unityアセットでの注意事項　●●\n\n●揺れもの\n髪に有料のDynamicBoneを使っています（服はウェイトそのままです。）、お持ちでない場合はMissingとなり揺れません。\n\n●Shader\nShaderに無料のArktoon-Shadersを使っています。\nArktoon-Shadersは下記よりダウンしてお使いください。\n\nhttps://github.com/synqark/Arktoon-Shaders/releases\n\n\n●確認\nデスクトップ、VR、フルトラッキングの確認済\n\n\n●●このモデルで可能な行為\n　・購入者がVRchat内で使用する改変は自由です\n　・VRchatをメインとした動画等への使用は自由です\n　・VRchat以外でのモデルの使用は制限しません。（例外は禁止事項にて）\n\n\n●●禁止事項\n　・再配布は禁止します。\n\n　・恐喝、政治への使用は禁止です。公序良俗に反しない範囲でご利用ください。\n\n　・VRchat内でのR18、R18Gへの使用は禁止します。\n　\n　・商用利用する場合は必ず\"Nullwhisper\"(または\"NullUDN\")のクレジットをお書きください。\n\n\n\n●●　連絡先　●●\n\nTwitter：@NULLwhisper3D\n\n\n制定日\n2019年2月22日\n","url":"https://booth.pm/ja/items/1238962","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/8f9207fb-c073-44a7-8957-ba013b66011b/i/1238962/ff6cc3d1-f2f4-4ab8-bd48-89e9ae1df7b6_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uyfNO34A4tBErAu3aUtN+nPb9Dty8JMoz3FnZiKBpxk="></script>
+    nonce="ZXMfR4yaQFYWAZv6Rbc6LKDuyYmRrTIj/i67IBAw7A8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1238962/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1238962/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
