--- a/VRChat/61/1238961.html
+++ b/VRChat/61/1238961.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XDBQp0IkGy5iyu+DDvbHiraH35icpNo5WFuYbfPvZ6M="></script>
+    "UbF1s1RCboRb5Uhg9J0Hj5RIAFcuetMGztr6FqZjzVw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パンジャンドラム改","description":"じょにさん印のパンジャンドラムが帰ってきた！\n\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。回転します。\n\n改変、商用等、自由にご利用いただけます。","url":"https://booth.pm/ja/items/1238961","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1238961/67428003-ffdf-4651-90c8-5c960f30f8db_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XDBQp0IkGy5iyu+DDvbHiraH35icpNo5WFuYbfPvZ6M="></script>
+    nonce="UbF1s1RCboRb5Uhg9J0Hj5RIAFcuetMGztr6FqZjzVw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1238961/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1238961/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
